--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase service account (contains sensitive credentials)
+firebase-service-account.json
+**/firebase-service-account.json
