--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   
   # Local storage for user sessions
   shared_preferences: ^2.2.2
+  
+  # Firebase packages
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
