--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
   flutter_local_notifications: ^18.0.1
+  
+  # Device info for FCM token management
+  device_info_plus: ^11.1.1
 
 dev_dependencies:
   flutter_test:
